--- a/client/src/css/Cards.css
+++ b/client/src/css/Cards.css
@@ -11,7 +11,7 @@ h1 {
   display: flex;
   flex-flow: column;
   align-items: center;
-  max-width: 1120px;
+  max-width: 1560px;
   width: 90%;
   margin: 0 auto;
 }
@@ -30,6 +30,7 @@ h1 {
   flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
+  min-width: 450px;
 }
 
 .cards__item__link {
@@ -39,7 +40,7 @@ h1 {
   box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  border-radius: 10px;
+  border-radius: 0px;
   overflow: hidden;
   text-decoration: none;
 }
@@ -63,11 +64,12 @@ h1 {
   margin-left: 10px;
   padding: 6px 8px;
   max-width: calc((100%) - 60px);
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 700;
   color: #fff;
-  background-color: #1f98f4;
+  background-color: #7e7e7e;
   box-sizing: border-box;
+  
 }
 
 .cards__item__img {
@@ -95,7 +97,7 @@ h1 {
 
 .cards__item__text {
   color: #252e48;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 24px;
 }
 
