--- a/client/src/css/Chapter.css
+++ b/client/src/css/Chapter.css
@@ -1,16 +1,17 @@
 body {
-	background-color: hsla(0, 0%, 100%, 0.801);
+	background-color: hsla(0, 100%, 94%, 0.801);
 }
 
 .container {
-	padding: 40px 20px 20px 20px;
-	width: 99%;
+	padding: 40px 0px 0px 0px;
+	width: 100%;
 	margin: auto;
 	flex-wrap: wrap;
 	display: flex;
 	justify-content: space-between;
 	justify-content: center;
 	flex-wrap: wrap;
+	max-width: 1560px;
 }
 
 .card_item {
