--- a/client/src/css/HeroSection.css
+++ b/client/src/css/HeroSection.css
@@ -15,6 +15,10 @@ video {
   justify-content: center;
   align-items: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  object-fit: fill;
+}
+
+img{
   object-fit: contain;
 }
 
