--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-  height: 80px;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,9 +24,12 @@
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
+  
   font-size: 2rem;
   display: flex;
   align-items: center;
+  margin-bottom: 20px
+  ;
 }
 
 .fa-typo3 {
@@ -86,7 +89,7 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
