--- a/client/src/css/bookIndex.css
+++ b/client/src/css/bookIndex.css
@@ -28,9 +28,9 @@
     align-items: center;
 }
 
-.title > h2{
+/* .title > h2{
     display: block;
-}
+} */
 
 
 .content{
@@ -46,4 +46,22 @@
     height: auto;
     max-height: 9999px;
     transition: all 0.5s cubic-bezier(1,0,1,0);
+}
+
+@media (max-width: 1024px) {
+    .title {
+        font-size: 16px;
+        font-weight: 600;
+    color: #203150;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+    .content {
+        font-size: 12px;
+    }
+    .accordion {
+        width: 90vw;
+    }
 }
