--- a/client/src/css/bookIndex.css
+++ b/client/src/css/bookIndex.css
@@ -24,6 +24,8 @@
     color: #203150;
     cursor: pointer;
     display: flex;
+    flex-direction: row;
+
     justify-content: space-between;
     align-items: center;
 }
