--- a/client/src/css/viewer.css
+++ b/client/src/css/viewer.css
@@ -3,10 +3,16 @@
     flex-direction: column;
     align-items: center;
     background-color: #525659;
+    overflow: auto;
 }
 
+.PDFPage{
+  margin: 0px 30%;
+}
 .react-pdf__Page{
-    /* box-shadow: 0 0 8px rgb(0 0 0 / 50%); */
+  overflow-y: hidden;
+  position: relative;
+  box-shadow: 0 0 8px rgb(0 0 0 / 50%);
 }
 .pdf-toolbox {
     background-color: #f6f6f6;
