--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,15 @@
     padding: 0;
     font-family: 'PT Sans', sans-serif;
   }
+
+  html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
   
   .home,
   .services,
