--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -38,14 +38,13 @@
 }
 
 .nav-menu {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
+  display: flex;
   list-style: none;
   text-align: center;
   width: 60vw;
   justify-content: end;
   margin-right: 2rem;
+  padding-bottom: 2rem;
 }
 
 .nav-item {
