GR, Book backend endpoints created and improved some css

--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -119,7 +119,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    /* transform: translate(25%, 50%); */
+    padding-top: 18px;
   }
 
   .menu-icon {
