--- a/client/src/css/bookIndex.css
+++ b/client/src/css/bookIndex.css
@@ -30,9 +30,11 @@
     align-items: center;
 }
 
-/* .title > h2{
+.title > h2{
     display: block;
-} */
+    
+    text-align: center;
+}
 
 
 .content{
@@ -59,6 +61,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    }
+    .title > h2{
+        font-size: 30px;
     }
     .content {
         font-size: 12px;
