--- a/client/src/css/uploader.css
+++ b/client/src/css/uploader.css
@@ -91,6 +91,7 @@ textarea {
   display: inline-block;
   padding: .75rem 1rem;
   margin-top: 1.618rem;
+  height: auto;
   font-weight: 400;
   text-align: center;
   text-transform: uppercase;
