--- a/client/src/css/bookIndex.css
+++ b/client/src/css/bookIndex.css
@@ -1,10 +1,12 @@
 .wrapper{
     display: flex;
     height: 100vh;
-    width:100vh;
+    width:100%;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .accordion{
@@ -13,7 +15,7 @@
 
 .item{
    
-    background-color: #f0ebe1;
+    background-color: #dedac4;
     margin-bottom: 5px;
     padding: 10px 20px;
 }
@@ -21,7 +23,7 @@
     
     font-size: 20px;
     font-weight: 600;
-    color: #203150;
+    color: #000000;
     cursor: pointer;
     display: flex;
     flex-direction: row;
@@ -38,9 +40,9 @@
 
 
 .content{
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 400;
-    color: #203150;
+    color: #000000;
     overflow: hidden;
     max-height: 0px;
     transition: all 0.5s cubic-bezier(0, 1, 0, 1);
@@ -56,7 +58,7 @@
     .title {
         font-size: 16px;
         font-weight: 600;
-    color: #203150;
+    color: #000000;
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -67,6 +69,11 @@
     }
     .content {
         font-size: 12px;
+    }
+    .wrapper{
+        width: 60vh;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
     .accordion {
         width: 90vw;
