--- a/client/src/css/uploader.css
+++ b/client/src/css/uploader.css
@@ -19,9 +19,9 @@ form {
 
 h1 {
   margin-top: 0;
-  margin-bottom: 3.236rem;
+  margin-bottom:0;
   text-align: center;
-  font-size: 1.618rem;
+  font-size: 3rem;
 }
 
 .form-group {
