--- a/client/src/css/HeroSection.css
+++ b/client/src/css/HeroSection.css
@@ -7,7 +7,7 @@ video {
 }
 
 .hero-container {
-  background: url('../../public/images/home2.jpg') center center/cover no-repeat;
+  background: url('../../public/images/home3.png') center center/cover no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
