--- a/client/src/css/serviceCards.scss
+++ b/client/src/css/serviceCards.scss
@@ -7,7 +7,7 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  margin: 0 2rem 2rem 0;
+  margin: 0 2rem 2rem 2rem;
 
   transition: all 0.3s ease-in-out;
   &:hover {
@@ -54,3 +54,5 @@ img {
 .c-card__content {
   padding: 10px 0;
 }
+
+
