--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -2,7 +2,7 @@
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   height: 70px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 1.2rem;
   position: sticky;
@@ -12,7 +12,7 @@
 
 .navbar-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   height: 80px;
   max-width: 1500px;
@@ -86,8 +86,9 @@
   .nav-menu {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     width: 100%;
-    height: 90vh;
+    height: 95vh;
     position: absolute;
     top: 70px;
     left: -100%;
