--- a/client/src/css/blog.css
+++ b/client/src/css/blog.css
@@ -37,7 +37,7 @@
     padding-left: 2rem;
     padding-right: 2rem;
     padding-bottom: 2rem;
-    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
     line-height: 1.5rem;
     color: #000;
@@ -50,6 +50,7 @@
     padding-right: 0rem;
     padding-bottom:0rem;
     width: 90%;
+   
   }
 
   
@@ -60,8 +61,13 @@
     align-items: center;
     width: 90%;
     height:50vh;
-    
   }
+  .blogh1{
+    font-size: 2rem;
+    width: 90%;
+    text-align: left;
+  }
+
 
 
 }
