--- a/client/src/css/serviceCards.css
+++ b/client/src/css/serviceCards.css
@@ -47,7 +47,8 @@
 img {
     width: 26rem;
     height: 15rem;
-    border-radius: 10px;
+   
+   
     -o-object-fit: cover;
     object-fit: cover;
     -webkit-box-align: center;
@@ -72,7 +73,7 @@ img {
 }
 
 .ll>p {
-
+    font-family: 'Roboto', sans-serif;
     text-align: left;
     margin-bottom: 0;
     width: 32ch;
@@ -106,9 +107,9 @@ img {
     }
 
     img {
-        width: 20rem;
+        width: 30rem;
         height: 10rem;
-        border-radius: 10px;
+        
         -o-object-fit: cover;
         object-fit: cover;
         -webkit-box-align: center;
@@ -118,8 +119,8 @@ img {
 
     .c-card__content>h1 {
         text-align: left;
-        padding-left: 0.5rem;
-        font-size: xx-large;
+        padding-left: 1rem;
+        font-size: x-large;
 
     }
 
@@ -127,6 +128,10 @@ img {
 
     .c-card__content {
         padding: 0;
+    }
+
+    .c-card{
+        width: 30rem;
     }
 
 
