--- a/client/src/css/HeroSection.css
+++ b/client/src/css/HeroSection.css
@@ -50,16 +50,60 @@ img{
 }
 
 .element2{
-  height: 50vh;
-  width: 20%;
-  background-color: #fff;
+  height: auto;
+  width: 36ch;
+
+  background-color: rgba(255, 255, 255, 0.2);
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
-  border-color: black;
+
+  border-color: rgb(255, 255, 255);
+  backdrop-filter: blur(8px);
+ border-right: none;
   border-style: solid;
-  border-width: 5px;
+  
   margin-top: -3rem;
 }
+
+.element2 > h1 {
+  font-family: "Josefin Sans", sans-serif;
+  text-decoration: underline;
+  font-weight: 600;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+  text-shadow: rgb(0, 0, 0);
+  color: #ffffff;
+  transition: all 0.3s ease;
+  z-index: 3;
+  font-size: 40px;
+}
+
+
+.gr > p {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-bottom: 0rem;
+  width: 30ch;
+  text-shadow: rgb(0, 0, 0);
+  color: #ffffff;
+  transition: all 0.3s ease;
+  z-index: 3;
+  font-size: 20px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.gr{
+  /* background-color: rgba(39, 39, 39, 0.531); */
+  padding-bottom: 1rem;
+}
+.gr > p:hover {
+ 
+  background-color: #333333;
+}
+
 .hero-btns {
   margin-left:2%;
   margin-top: 32px;
@@ -107,4 +151,6 @@ img{
     width: 100%;
     margin: 2%;
   }
+
+  
 }
