--- a/client/src/css/blog.css
+++ b/client/src/css/blog.css
@@ -3,7 +3,7 @@
     padding: 2rem;
     justify-content: center;
     align-items: center;
-
+    object-fit: contain;
     width: 70%;
     height:60vh;
     overflow-x: hidden;
