--- a/client/src/css/serviceCards.css
+++ b/client/src/css/serviceCards.css
@@ -50,7 +50,7 @@ img {
    
    
     -o-object-fit: cover;
-    object-fit: cover;
+    object-fit: contain;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -107,11 +107,11 @@ img {
     }
 
     img {
-        width: 30rem;
-        height: 10rem;
+        width: auto;
+        height: auto;
         
-        -o-object-fit: cover;
-        object-fit: cover;
+        -o-object-fit: contain;
+        object-fit: contain;
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
